--- a/estilo.css
+++ b/estilo.css
@@ -191,7 +191,7 @@
 #PrAppCarga{
     width: 100px;
     height: 100px;
-    background-image: url('Foto/PC.png');
+    background-image: url('Foto/Pc.png');
     background-size: cover;
     background-position: center;
     border: 2px solid black;
